--- a/example/index.css
+++ b/example/index.css
@@ -4,14 +4,20 @@ body {
 } 
 
 .navbar{
-  padding: 80px;
+  padding: 60px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
+.navbar img{
+  height: 50%;
+  width: 50%;
+}
+
+
 .cbp-af-header-shrink{
   padding-top: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 15px;
   opacity: 0.7;
 }
 
@@ -20,4 +26,10 @@ header, footer {
   color: deeppink;
   padding: 20px;
   text-align: center;
+}
+
+.img-fluid{
+  margin: 0px auto;
+  box-shadow: rgba(0,0,0,0.5) 10px 10px 60px;
+  padding-bottom: 15px;
 }
